# DocumentParser

./: .gitignore  README.md  Untitled-1.ipynb  main.py  parser.py  parser2.py  pyproject.toml  test.py
.github/workflows/: python-package.yml
documents/: hcfa.json  hcfa.md  hcfa.txt  testing-cms1500.json
notebooks/: Untitled-1.ipynb  Untitled-1.md
output/: hcfa.json  hcfa.md  hcfa.txt  testing-cms1500.json  testing-cms1500.md  testing-cms1500.txt
src/: processor.py
tests/: test_processor.py
